<resources>
    <string name="app_name">MyDomily</string>
    <string name="username_input_label">Email Address</string>
    <string name="password_input_label">Password</string>
    <string name="log_in_button_label">Log In</string>
    <string name="add_profile_button_label">Add Profile</string>
    <string name="parent_profile_label">Parent\'s Profile</string>
    <string name="chore_assignment_user_input">User</string>
    <string name="chore_selection_label">Chore</string>
    <string name="custom_chore_input_label">Custom Chore</string>
    <string name="time_input_label">Time</string>
    <string name="picture_toggle_label">Require Photo as Proof?</string>
    <string name="assign_chore_button">Assign Chore</string>
    <string name="message_input_label">Message</string>
    <string name="confirm_assign_chore_button_label">Assign Chore</string>


    <string name="activity1">Travis</string>
    <string name="activity2">To-do List</string>
    <string name="activity3">Choose a Member To Assign Chore</string>
    <string name="activity7">Button</string>
    <string name="activity8">Button</string>
    <string name="Button">B</string>
    <string name="Checkbox">Dishes- 1:30pm</string>
    <string name="Checkbox3">Mop- 8:00pm</string>
    <string name="checkBox2">Laundry- 5:00pm</string>
    <string name="Button4">Take a Picture</string>


</resources>